Ensure the article title doesn't jump around in size

--- a/sass/_post.sass
+++ b/sass/_post.sass
@@ -7,6 +7,10 @@ article.post
       border-bottom: $articleborder
       margin-bottom: -1px
       +header-text
+
+      /* Ensure the article title doesn't jump around in size
+      font-size: 2em
+      +min-height(1.5em)
     a
       +hover-link
     p
